logo and header

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,9 @@
 @import "base/grid";
 
 @import "global/variables";
+
+
 @import "components/logo.scss";
+@import "components/buttons.scss";
 
-
-
+@import "layout/mainHeader.scss";
