--- a/scss/global/_variables.scss
+++ b/scss/global/_variables.scss
@@ -2,3 +2,9 @@
 
 $yellowColor: rgb(255, 196, 17);
 $greyColor:rgb(109, 106, 106);
+$borderFat: 4px solid $greyColor;
+
+
+.body {
+    background-color: $yellowColor;
+}
