--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,18 +4,18 @@
     align-items: center;
     width: 70px;
     cursor: pointer;
-    padding: 10px 20px;
-}
+    padding: 10px 0 10px 20px;
 
-.mainHeader__button span{
-    display: block;
-    width: 40px;
-    border-bottom: $borderFat;
-    margin: 5px 0;
+    span {
+        display: block;
+        width: 40px;
+        border-bottom: $borderFat;
+        margin: 5px 0;
+    }
 }
 
 .button--menu {
     position: absolute;
     top: 10px;
-    right: 20px;
+    right: 0px;
 }
