--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,18 +1,20 @@
 .container {
-    min-height: 100vh;
-    position: relative;
-    background-color: $yellowColor;
+    min-height: 200vh;
+
 }
 
 .logo {
     position: absolute;
-    bottom: 50px;
+    bottom: -600px;
     right: 0;
     width: 300px;
     height: 300px;
     border: 6px solid rgb(109, 106, 106);
     color: rgb(109, 106, 106);
+    background-color: $yellowColor;
     padding: 20px;
+    z-index: 1;
+    transition: 3s;
 
     p {
         font-size: 100px;
@@ -21,6 +23,9 @@
     }
 }
 
+.logoMove {
+    transform: translate(-990px, -450px) scale(0.4);
+}
 
 
 // font-family: 'Orbitron', sans-serif;
