--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,11 @@
 @import "base/grid";
 
 @import "global/variables";
+@import "global/keyframes";
 
 
 @import "layout/mainHeader.scss";
+@import "layout/mainMenu";
 
 @import "components/logo.scss";
 @import "components/buttons.scss";
