--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,12 +3,14 @@
     justify-content: center;
     align-items: center;
     width: 70px;
-    cursor: pointer;
     padding: 10px 0 10px 20px;
+    cursor: pointer;
 
     span {
         display: block;
         width: 40px;
+        // height: 4px;
+        // background-color: red;
         border-bottom: $borderFat;
         margin: 5px 0;
     }
@@ -18,4 +20,12 @@
     position: absolute;
     top: 10px;
     right: 0px;
+    opacity: 0;
 }
+
+.showMenuBtn {
+    animation-name: show;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+}
+
